Fix issue with urlPath for aggregations
After some experimentation it seems the urlPath for each <access>
method on the top level dataset (which contains the <netcdf>
aggregation) must match the urlPath attribute on the <dataset> itself.

This is contrary to the THREDDS documentation so I think it must be a
bug...

--- a/tds_utils/templates/dataset_catalog.xml
+++ b/tds_utils/templates/dataset_catalog.xml
@@ -10,7 +10,12 @@
     <datasetRoot path="{{ r.path }}" location="{{ r.location }}"/>
     {% endfor %}
 
+    {% if aggregation %}
+    <dataset name="{{ dataset_id }}" ID="{{ dataset_id }}" urlPath="{{ aggregation.url_path }}">
+    {% else %}
     <dataset name="{{ dataset_id }}" ID="{{ dataset_id }}">
+    {% endif %}
+
         <metadata inherited="true">
           <dataType>Grid</dataType>
         </metadata>
